# msgpack-rust

./: Cargo.toml
rmp/: Cargo.toml
rmp-serde/: Cargo.toml
rmp-serde/src/: config.rs  decode.rs  encode.rs  lib.rs
rmp/src/: lib.rs
rmp/src/decode/: mod.rs  str.rs
rmp/src/encode/: buffer.rs  mod.rs
rmpv/: Cargo.toml
rmpv-tests/: Cargo.toml
