[package]
name = "rmp-serde"
version = "1.1.1"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Serde bindings for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp-serde"
readme = "README.md"
keywords = ["msgpack", "MessagePack", "serde", "serialization"]
categories = ["encoding"]
edition = "2021"

[package.metadata.release]
tag-prefix = "{{crate_name}}/"

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
rmp = { version = "0.8.11", path = "../rmp", default-features = false }
serde = { version = "1.0.136", default-features = false }

[dev-dependencies]
rmpv = { path = "../rmpv" }
serde_bytes = { version = "0.11.5", default-features = false }
serde_derive = "1.0.136"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["std"]
std = ["serde/std", "rmp/std", "serde_bytes/std", "byteorder/std"]
