[package]
name = "rmpv-tests"
version = "0.0.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
publish = false
edition = "2018"

[dev-dependencies]
serde_bytes = "0.11.5"
serde = "1.0.130"
serde_derive = "1.0.119"
rmp-serde = { path = "../rmp-serde", features = ["std"] }
rmpv = { features = ["with-serde"], path = "../rmpv" }
